--- a/_config.yml
+++ b/_config.yml
@@ -71,5 +71,5 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
    type: git  
-   repo: https://github.com/YangSenGH/YangSenGH.github.io.git 
+   repo: https://github.com/yysean/yysean.github.io.git 
    branch: master
